# gpbayeskit

./: README.md  pyproject.toml
doc/: vignette.html
examples/: demo.py
gpbayeskit/: __init__.py  data_utils.py  parameters.py
gpbayeskit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
gpbayeskit/kernels/: __init__.py  _functions.py  _lagrangian.py  _lagrangian_fns.py  _parametrisation.py  _spatial.py
gpbayeskit/models/: __init__.py  base.py  spatial.py  spatiotemporal.py
gpbayeskit/plotting/: __init__.py  _contours.py  _likelihood.py  _realizations.py
gpbayeskit/simulation/: __init__.py  _spatiotemporal.py
gpbayeskit/stdata/: __init__.py  _stf.py  _sti.py  _sts.py  _stt.py
gpbayeskit/utils/: __init__.py
tutorials/: gpbayes_tutorial.ipynb
tutorials/.ipynb_checkpoints/: gpbayes_tutorial-checkpoint.ipynb
