[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name        = "gpbayeskit"
version     = "0.1.0"
description = "Gaussian process modeling and fitting"

authors = [
    {name = "Pulong Ma"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
]