[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "gpbayeskit"
version         = "0.1.0"
description     = "Gaussian process tools for Bayesian spatio-temporal modelling"
readme          = "README.md"
requires-python = ">=3.10"
license         = { text = "MIT" }
dependencies    = [
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.7"]
dev  = ["pytest>=7", "pytest-cov", "ruff"]

[tool.setuptools.packages.find]
where   = ["."]
include = ["gpbayeskit*"]
exclude = ["tutorials", "tutorials.*", "tests", "tests.*", "docs", "docs.*"]

[tool.ruff]
line-length = 88